fixed Path div innerText overflow:ellipses and add title

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -230,6 +230,7 @@
     height:20px;
     line-height:20px;
     max-height:40px;
+    overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
 }
